# samp-discord-connector

./: .gitmodules  CMakeLists.txt  conanfile.txt
.github/workflows/: build.yml
libs/log-core/: CMakeLists.txt
libs/log-core/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
